--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
 		<slf4j.version>1.7.25</slf4j.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<javax-servlet-api.version>3.1.0</javax-servlet-api.version>
+		<servlet-api.version>2.5</servlet-api.version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -73,15 +75,15 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-			<scope>provided</scope>
+			<version>${javax-servlet-api.version}</version>
+			
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
+			<version>${servlet-api.version}</version>
+			
 		</dependency>
 
 
@@ -97,6 +99,13 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/xdoclet/xdoclet -->
+		<dependency>
+			<groupId>xdoclet</groupId>
+			<artifactId>xdoclet</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+
 		<!-- Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -163,7 +172,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<!--<version>3.6.1</version> -->
+				<version>3.6.1</version> 
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
