--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -26,9 +26,9 @@
 #
 #
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/market?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+jdbc.url=jdbc:mysql://localhost:3306/base?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
 jdbc.username=root
-jdbc.password=root
+jdbc.password=280717
 
 ## Database type
 jpa.database=MYSQL
